[package]
name = "spl-governance"
version = "4.0.0"
description = "Solana Program Library Governance Program"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
arrayref = "0.3.9"
bincode = "1.3.2"
borsh = "1.5.1"
num-derive = "0.4"
num-traits = "0.2"
serde = "1.0.210"
serde_derive = "1.0.103"
solana-program = "2.0.3"
spl-token-2022 = { version = "5.0.2", path = "../../token/program-2022", features = [
  "no-entrypoint",
] }
spl-transfer-hook-interface = { version = "0.8.2", path = "../../token/transfer-hook/interface" }
spl-governance-tools = { version = "0.1.4", path = "../tools" }
spl-governance-addin-api = { version = "0.1.4", path = "../addin-api" }
thiserror = "1.0"

[dev-dependencies]
assert_matches = "1.5.0"
base64 = "0.22"
proptest = "1.5"
solana-program-test = "2.0.3"
solana-sdk = "2.0.3"
spl-governance-test-sdk = { version = "0.1.4", path = "../test-sdk" }
spl-governance-addin-mock = { version = "0.1.4", path = "../addin-mock/program" }
spl-transfer-hook-example = { path = "../../token/transfer-hook/example", features = [
  "no-entrypoint",
] }

[lib]
crate-type = ["cdylib", "lib"]
