[package]
name = "spl-governance-test-sdk"
version = "0.1.4"
description = "Solana Program Library Governance Program Test SDK"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[dependencies]
arrayref = "0.3.9"
bincode = "1.3.2"
borsh = "1.5.1"
lazy_static = "1.5.0"
num-derive = "0.4"
num-traits = "0.2"
serde = "1.0.210"
serde_derive = "1.0.103"
solana-program = "2.0.3"
solana-program-test = "2.0.3"
solana-sdk = "2.0.3"
spl-token = { version = "6.0", path = "../../token/program", features = [
  "no-entrypoint",
] }
spl-token-2022 = { version = "5.0.2", path = "../../token/program-2022", features = [
  "no-entrypoint",
] }
spl-tlv-account-resolution = { version = "0.8.1", path = "../../libraries/tlv-account-resolution" }
spl-transfer-hook-interface = { version = "0.8.2", path = "../../token/transfer-hook/interface" }
spl-transfer-hook-example = { version = "0.6", path = "../../token/transfer-hook/example", features = [ "no-entrypoint" ] }
spl-token-client = { version = "0.12.1", path = "../../token/client" }
thiserror = "1.0"
